# Velcro

./: .gitignore  .gitmodules  Application.cpp  Application.h  CMakeLists.txt  main.cpp
Test/Unit/: CMakeLists.txt  TestScene.cpp  TestUtils.cpp  TestVector.cpp  TestVertexBuffer.cpp
core/: Application.cpp  Application.h  CMakeLists.txt  Codes.h
core/Assets/Models/: cube.fbx  utahTeapot.fbx
core/Assets/Shaders/: Flipbook.frag  Flipbook.vert  SelectedMesh.frag  SelectedMesh.vert  TTF.frag  Text.frag  Text.vert  compileShader.bat  glslangValidator.bat  line.frag  line.vert  model.frag  model.vert  multi.frag  multi.vert  shader.frag  shader.vert
core/Assets/Shaders/SPIR-V/: FlipbookF.spv  FlipbookV.spv  SelectedMeshF.spv  SelectedMeshV.spv  TTFF.spv  TTFV.spv  frag.spv  lineV.spv  modelV.spv  multiF.spv  multiV.spv  textF.spv  textV.spv  vert.spv
core/Render/: FPSCounter.hpp  Renderer.cpp  Renderer.h  VulkanRenderDevice.hpp
core/Render/Camera/: Camera.cpp  Camera.h  FirstPersonCamera.cpp  FirstPersonCamera.h  InterfaceCamera.h
core/Render/Factory/: FactoryModel.cpp  FactoryModel.h  FactoryVulkan.cpp  FactoryVulkan.h
core/Render/Layers/: FlipbookLayer.cpp  FlipbookLayer.h  ImGuiLayer.cpp  ImGuiLayer.h  LineLayer.cpp  LineLayer.h  ModelLayer.cpp  ModelLayer.h  MultiMeshLayer.cpp  MultiMeshLayer.h  RenderLayer.cpp  RenderLayer.h  SelectedMeshLayer.cpp  SelectedMeshLayer.h  TextLayer.cpp  TextLayer.h  TrueTypeFontLayer.cpp  TrueTypeFontLayer.h
core/Render/Objects/: IndexBuffer.cpp  IndexBuffer.h  ShaderStorageBuffer.cpp  ShaderStorageBuffer.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexBuffer.cpp  VertexBuffer.h
core/Scene/: Components.hpp  Scene.cpp  Scene.h
core/Utils/: UtilsFile.cpp  UtilsFile.h  UtilsMath.cpp  UtilsMath.h  UtilsTemplate.h  UtilsVulkan.cpp  UtilsVulkan.h
core/events/: Event.h  KeyEvent.h  MouseEvent.h
core/pch/: pch.cpp  pch.h
dep/: CMakeLists.txt  magic_enum.hpp
pch/: pch.h
